[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "composition_based_feature_vector"
authors = [
    {name = "Steven Kauwe", email = "jkkauwe@gmail.com"},
    {name="Andrew Falkowski"},
    {name="Anthony Wang", email="aytwang@alumni.uwaterloo.ca"},
    {name="Sterling G. Baird", email="sterling.baird@utah.edu"}
    ]
readme = "README.md"

requires-python = ">=3"

dependencies=[
                "numpy",
                "pandas",
                "tqdm",
                "pytest",
            ]

classifiers = [
        "License :: OSI Approved :: MIT License",
        "Development Status :: 3 - Alpha",
        "Intended Audience :: Science/Research",
        "Operating System :: POSIX :: Linux",
        "Operating System :: MacOS",
        "Operating System :: Microsoft :: Windows",
        "Programming Language :: Python :: 3",
        "Programming Language :: Python :: 3.4",
        "Programming Language :: Python :: 3.5",
        "Programming Language :: Python :: 3.6",
        "Programming Language :: Python :: 3.7",
        "Programming Language :: Python :: 3.8",
        "Programming Language :: Python :: 3.9",
        "Programming Language :: Python :: 3.10",
    ]
dynamic = ["version", "description"]

[project.urls]
Home = "https://github.com/sparks-baird/CBFV"
